--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 		<java.version>17</java.version>
 		<kotlin.version>1.9.25</kotlin.version>
 		<awssdk.version>2.29.36</awssdk.version>
+		<jacoco.version>0.8.12</jacoco.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -94,6 +95,26 @@
 			<artifactId>kotlin-logging-jvm</artifactId>
 			<version>2.0.11</version>
 		</dependency>
+		<dependency>
+			<groupId>io.kotest</groupId>
+			<artifactId>kotest-runner-junit5-jvm</artifactId>
+			<version>6.0.0.M1</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.ninja-squad</groupId>
+			<artifactId>springmockk</artifactId>
+			<version>4.0.2</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.mockk</groupId>
+			<artifactId>mockk-dsl-jvm</artifactId>
+			<version>1.13.13</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -122,6 +143,39 @@
 						<version>${kotlin.version}</version>
 					</dependency>
 				</dependencies>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.2</version>
+			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>${jacoco.version}</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+						<configuration>
+							<!-- Excluindo arquivos de cobertura -->
+<!--							<excludes>-->
+<!--								<exclude>**/config/*</exclude>-->
+<!--								<exclude>**/adapter/*</exclude>-->
+<!--								<exclude>**/gateway/*</exclude>-->
+<!--							</excludes>-->
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
